--- a/templates/framework/navbar.html
+++ b/templates/framework/navbar.html
@@ -1,34 +1,43 @@
 <!-- Navigation -->
 <nav class="navbar navbar-default navbar-shrink">
-<div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header page-scroll">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand page-scroll" href={% url 'home'%}>Picature</a>
-    </div>
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header page-scroll">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand page-scroll" href={% url 'home'%}>Picature</a>
+        </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li>
-          <a class="page-scroll" href="{% url "timeline" %}">Discovery</a>
-        </li>
-        <li>
-          <a class="page-scroll" href={% url "editor" %}>Editor</a>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-          <li class="hidden">
-              <a href="#page-top"></a>
-          </li>
-      </ul>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a class="page-scroll" href="{% url "timeline" %}">Discovery</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href={% url "editor" %}>Editor</a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="hidden">
+                    <a href="#page-top"></a>
+                </li>
+                {% if user %}
+                    <li>
+                        <a href="/u/profile">Profile</a>
+                    </li>
+                    <li>
+                        <a href="/u/logout">Logout</a>
+                    </li>
+                {% endif %}
+
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
     </div>
-    <!-- /.navbar-collapse -->
-</div>
-<!-- /.container-fluid -->
+    <!-- /.container-fluid -->
 </nav>
