--- a/templates/timeline/comments.html
+++ b/templates/timeline/comments.html
@@ -7,7 +7,7 @@
         </div>
         <div class = "col-md-11">
             <div class = "col-md-7"><label style = "margin-left:10px"> {{ comment.user.user.username }} </label></div>
-            <div class = "col-md-5"><p class="text-muted" style = "font-style: italic;">{{ comment.time }}</p></div>
+            <div class = "col-md-5"style = "margin-right:-20px" align="right"><p class="text-muted" style = "font-style: italic;">{{ comment.time|date:"d M Y" }}</p></div>
             <div class = "col-md-12"><p style = "margin-left:10px" >{{ comment.content }}</p></div>
         </div>
         <div class = "col-md-12" style="margin:10px"></div>
