--- a/templates/timeline/card.html
+++ b/templates/timeline/card.html
@@ -1,17 +1,21 @@
+{% load avatar_tags %}
 {% for post in posts.all %}
 {% load staticfiles %}
 <div class="col-md-6 col-md-offset-3 portfolio-item" style="background-color:white">
-    <div class="portfolio-rightalign">
-        <p class="text-muted">{{ post.upload_time }}</p>
+
+    <div>
+    <div class = "col-md-12 " style="margin-top:10px;">
+        <div class = "col-lg-1" style="margin-left:-15px">{% avatar post.user.user.username 24 class="img-round" id="user_avatar" %}</div>
+        <div class = "col-lg-3" style="margin-left:-15px"><p class = "text-muted">{{post.user.user.username}}</p></div>
+        <div class = "col-lg-4" style="margin-left:30px;margin-top:-20px"><h3 align="center">{{post.theme.name}}</h3></div>
+        <div class = "col-lg-4"><p class="text-muted" align="right" style = "font-style: italic;">{{ post.upload_time|date:"d M Y"}}</p></div>
     </div>
-    <div class="portfolio-caption">
-        <h4 style = "margin:10px ">Round Icons</h4>
-        <p class="text-muted" >Graphic Design</p>
     </div>
+
     <a href="#portfolioModal" class="portfolio-link" data-toggle="modal">
         <div class="portfolio-hover" data-toggle="tooltip" title="click to apply this theme">
             <div class="portfolio-hover-content">
-                <i class="fa fa-plus fa-5x"></i>
+                <i class="fa fa-arrow-right fa-5x"></i>
             </div>
         </div>
         <img src="{{ post.image.url }}"  class="img-responsive" alt="">
