--- a/templates/timeline/timeline.html
+++ b/templates/timeline/timeline.html
@@ -199,7 +199,7 @@
             if(content === "") {
                 return;
             }
-            var id = sel.parent().parent().parent().prev().prev().text();
+            var id = sel.parent().parent().parent().parent().prev().prev().text();
             $.ajax('/timeline/add-comment', {data: {"content": content, "post-id": id}, type: "POST"}).done(function (data) {
                 sel.parent().parent().html(data);
             });
