--- a/templates/timeline/card.html
+++ b/templates/timeline/card.html
@@ -12,7 +12,7 @@
     </div>
     </div>
 
-    <a href="#portfolioModal" class="portfolio-link" data-toggle="modal" data-whatever="{{ post.theme.id }}">
+    <a href="/themes/apply?id={{ post.theme.id }}" class="portfolio-link">
         <div class="portfolio-hover" data-toggle="tooltip" title="click to apply this theme">
             <div class="portfolio-hover-content">
                 <i class="fa fa-arrow-right fa-5x"></i>
