--- a/templates/timeline/timeline.html
+++ b/templates/timeline/timeline.html
@@ -28,55 +28,6 @@
 {#    <img src={% static "img/loading.gif"%} alt="loading" />#}
 {#</p>#}
 
-<!-- Portfolio Modal 1 -->
-<div class="portfolio-modal modal fade" id="portfolioModal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-                <div class="rl">
-                </div>
-            </div>
-        </div>
-        <div class="container" id="photo-gallary">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="modal-body">
-                        <!-- Project Details Go Here -->
-                        <h2>Upload Your Photos</h2>
-                        <p class="item-intro text-muted">upload some photos to see how it works</p>
-                        <div style="display: none" id="theme_id"></div>
-                        <div class="col-md-12">
-                            <div class="col-md-1"></div>
-                            <div class="col-md-5"><button class="btn btn-danger btn-lg" style="width:200px;margin-bottom:20px;" id="run_button" onclick="run()" disabled>run</button></div>
-                            <div class="col-md-5"><a href="javascript:;" class="file btn btn-info btn-lg" style="width:200px;margin-bottom:20px;">upload
-                                <input type="file" name="" id="file_upload" accept="image/*">
-                            </a></div>
-                            <div class="col-md-1"></div>
-                        </div>
-
-{#                        <div class="image_container">#}
-{#                            <img id="preview" width="60" height="60">#}
-                        {#                        </div>#}
-                        <div class="col-md-12">
-                            <canvas id="preview_canvas" height="600" width="600">
-
-                            </canvas>
-                        </div>
-
-
-
-
-                            <div class="row" id="photo-upload">
-                        </div>
-
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
 {% endblock %}
 
 {% block script %}
@@ -112,16 +63,28 @@
     </script>
 
     <script type="text/javascript">
+
+        window.current_page = 1;
+        window.is_stopped = false;
+
         $(function() {
             var win = $(window);
             win.scroll(function() {
                 if ($(document).height() - win.height() == win.scrollTop()) {
+                    if(window.is_stopped === true) {
+                        return;
+                    }
 {#                    $('#loading').show();#}
+                    window.current_page += 1;
                     $.ajax({
-                        url: '/timeline/posts?page=1',
+                        url: '/timeline/posts?page=' + window.current_page,
                         dataType: 'html',
                         success: function(html) {
-                            $('#timeline-main').append(html);
+                            if(html.trim() === "") {
+                                window.is_stopped = true;
+                            }
+                            else
+                                $('#timeline-main').append(html);
 {#                            $('#loading').hide();#}
                         }
                     })
