--- a/templates/theme/apply_theme.html
+++ b/templates/theme/apply_theme.html
@@ -13,8 +13,7 @@
 {% block main_content %}
     <div class="container" id="photo-gallary">
         <div class="row">
-            <div class="col-lg-12">
-                <div class="modal-body">
+            <div class="col-lg-12 text-center">
                     <!-- Project Details Go Here -->
                     <h2>Upload Your Photos</h2>
                     <p class="item-intro text-muted">upload some photos to see how it works</p>
@@ -40,8 +39,7 @@
                     </div>
 
 
-                </div>
-            </div>
+            </>
         </div>
     </div>
 {% endblock %}
