profile fontpage update

--- a/templates/timeline/card.html
+++ b/templates/timeline/card.html
@@ -12,6 +12,7 @@
     </div>
     </div>
 
+    <div>
     <a href="#portfolioModal" class="portfolio-link" data-toggle="modal" data-whatever="{{ post.theme.id }}">
         <div class="portfolio-hover" data-toggle="tooltip" title="click to apply this theme">
             <div class="portfolio-hover-content">
@@ -20,6 +21,7 @@
         </div>
         <img src="{{ post.image.url }}"  class="img-responsive" alt="">
     </a>
+    </div>
 
     <!--add-->
     <div id = "Hiddenpart" style="display:none">{{ post.id }}</div>
