--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -1,5 +1,7 @@
+
 {% extends 'framework/base.html' %}
 {% load staticfiles %}
+{% load avatar_tags %}
 
 {% block sheetstyle %}
     <link rel="stylesheet" href={% static "css/myuser.css" %}>
@@ -11,56 +13,100 @@
 
 {% block main_content %}
 
-    <!-- Header -->
 <div id = "userhead" style = "margin-top:50px;">
         <div class="col-md-12 user_info">
-            <img class = "img-circle userheadicon" id = "user_headicon" src= {% static "img/team/head_my.png" %}>
-            <h3 id = "user_head">{{ user.user.username }}</h3>
-            <table align="center"style = "font-style: italic;">
-                <tr>
-                    <td><p class = "text-muted" style = "margin:5px">Themes {{ posts.count }}</p></td>
-                    <td><p class = "text-muted" style = "margin:5px">Favorites {{ favorites.count }}</p></td>
-{#                    <td><p class = "text-muted" style = "margin:5px">Fans 985</p></td>#}
-                </tr>
-            </table>
+            <div class = "col-md-4"></div>
+            <div class = "col-md-4" id = "user_headicon" sytle="align:center;">
+                {% avatar user 255 %}
+            </div>
+            <div class = "col-md-4"></div>
+
+            <div class = "col-md-12">
+                <h3 id = "user_head">{{ user.user.username }}</h3>
+                <table align="center"style = "font-style: italic;">
+                    <tr>
+                        <td><p class = "text-muted" style = "margin:5px">Themes {{ posts.count }}</p></td>
+                        <td><p class = "text-muted" style = "margin:5px">Favorites {{ favorites.count }}</p></td>
+    {#                    <td><p class = "text-muted" style = "margin:5px">Fans 985</p></td>#}
+                    </tr>
+                </table>
+            </div>
             <div style = "padding:40px" class="col-md-12"></div>
         </div>
 </div>
 
-<div id = "user_works" style = "padding:50px" class="col-md-12">
-    <h1 class = "user_info">Works</h1>
-    <div style = "margin:40px"></div>
-    {% for post in posts.all %}
-    <div class="col-md-4 user_info" >
-        <img src="{{ post.image.url }}" class="img-rounded photos">
-        <div class="portfolio-caption">
-            <h4>Round Icons</h4>
-            <p class="text-muted" >Graphic Design</p>
+<section id="portfolio">
+        <div class="container">
+        <div class="row">
+            <h1 class = "user_info">Works</h1>
+            <div style = "margin:40px"></div>
+        </div>
+            <div class="row">
+            {% for post in posts.all %}
+                <div class="col-md-4 col-sm-6 portfolio-item user_info" style="max-width:400px;height:400px;" align="center">
+                    <a href="#portfolioModal" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover" data-toggle="tooltip"  onclick="showlargeimg($(this))">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-search-plus fa-3x fa-inverse"></i>
+                            </div>
+                        </div>
+                        <img src="{{ post.image.url }}" id="smallimg" style="max-width:360px;max-height:400px;" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>{{post.theme.name}}</h4>
+                        <p class="text-muted">{{post.description}}</p>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </section>
+
+<section id="portfolio">
+        <div class="container">
+        <div class="row">
+            <h1 class = "user_info">Favorite</h1>
+            <div style = "margin:40px"></div>
+        </div>
+            <div class="row">
+            {% for fav in favorites.all %}
+                <div class="col-md-4 col-sm-6 portfolio-item user_info" style="max-width:400px;height:400px;" align="center">
+                    <a href="#portfolioModal" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover" data-toggle="tooltip"  onclick="showlargeimg($(this))">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-search-plus fa-3x fa-inverse"></i>
+                            </div>
+                        </div>
+                        <img src="{{ fav.image.url }}" id="smallimg" style="max-width:360px;max-height:400px;" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>{{fav.theme.name}}</h4>
+                        <p class="text-muted">{{fav.description}}</p>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </section>
+
+<div class="portfolio-modal modal fade" id="portfolioModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <img id = "largeimg" align="center" style="max-width: 100%;height: auto;">
         </div>
     </div>
-    {% endfor %}
-{#    <div class = "col-md-12" style="margin-top:15px;">#}
-{#        <button id = "works-button" class = "col-md-8 col-md-offset-2 btn btn-info btn-lg" style="background-color:#FFD700;border-color:#FFD700;"> more</button>#}
-{#    </div>#}
-</div>
 
-<div id = "user_favorite"  style = "padding:50px" class="col-md-12">
-<h1 class = "user_info">Favorite</h1>
-    <div style = "margin:40px"></div>
-    {%for fav in favorites.all %}
-    <div class = "col-md-4 user_info" >
-        <img src="{{ fav.image.url }}" class = "img-rounded photos">
-        <div class="portfolio-caption">
-            <h4>Round Icons</h4>
-            <p class="text-muted" >Graphic Design</p>
-        </div>
-    </div>
-    {%endfor%}
-
-    <div class = "col-md-12" style="margin-bottom:30px"></div>
-{#    <div class = "col-md-12" style="margin-top:15px;">#}
-{#        <button id = "favorite-button"class = "col-md-8 col-md-offset-2 btn btn-info btn-lg" style="background-color:#FFD700;border-color:#FFD700;"> more</button>#}
-{#    </div>#}
-</div>
+<script>
+    function showlargeimg(sel) {
+        var path = sel.next()[0].src;
+        $('#largeimg').attr("src",path);
+    }
+</script>
 
 {% endblock %}
+
