--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -13,7 +13,7 @@
 
 {% block main_content %}
 
-<div id = "userhead" style = "margin-top:50px;">
+    <div id = "userhead" style = "margin-top:50px;">
         <div class="col-md-12 user_info">
             <div class = "col-md-4"></div>
             <div class = "col-md-4" id = "user_headicon" sytle="align:center;">
@@ -27,69 +27,69 @@
                     <tr>
                         <td><p class = "text-muted" style = "margin:5px">Themes {{ posts.count }}</p></td>
                         <td><p class = "text-muted" style = "margin:5px">Favorites {{ favorites.count }}</p></td>
-    {#                    <td><p class = "text-muted" style = "margin:5px">Fans 985</p></td>#}
+                        {#                    <td><p class = "text-muted" style = "margin:5px">Fans 985</p></td>#}
                     </tr>
                 </table>
             </div>
             <div style = "padding:40px" class="col-md-12"></div>
         </div>
-</div>
+    </div>
 
-<section id="portfolio">
+    <section id="portfolio">
         <div class="container">
-        <div class="row">
-            <h1 class = "user_info">Works</h1>
-            <div style = "margin:40px"></div>
-        </div>
             <div class="row">
-            {% for post in posts.all %}
-                <div class="col-md-4 col-sm-6 portfolio-item user_info" style="max-width:400px;height:400px;" align="center">
-                    <a href="#portfolioModal" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover" data-toggle="tooltip"  onclick="showlargeimg($(this))">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-search-plus fa-3x fa-inverse"></i>
+                <h1 class = "user_info">Works</h1>
+                <div style = "margin:40px"></div>
+            </div>
+            <div class="row">
+                {% for post in posts.all %}
+                    <div class="col-md-4 col-sm-6 portfolio-item user_info" style="max-width:400px;height:400px;" align="center">
+                        <a href="#portfolioModal" class="portfolio-link" data-toggle="modal">
+                            <div class="portfolio-hover" data-toggle="tooltip"  onclick="showlargeimg($(this))">
+                                <div class="portfolio-hover-content">
+                                    <i class="fa fa-search-plus fa-3x fa-inverse"></i>
+                                </div>
                             </div>
+                            <img src="{{ post.image.url }}" id="smallimg" style="max-width:360px;max-height:400px;" alt="">
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>{{post.theme.name}}</h4>
+                            <p class="text-muted">{{post.description}}</p>
                         </div>
-                        <img src="{{ post.image.url }}" id="smallimg" style="max-width:360px;max-height:400px;" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>{{post.theme.name}}</h4>
-                        <p class="text-muted">{{post.description}}</p>
                     </div>
-                </div>
                 {% endfor %}
             </div>
         </div>
     </section>
 
-<section id="portfolio">
+    <section id="portfolio">
         <div class="container">
-        <div class="row">
-            <h1 class = "user_info">Favorite</h1>
-            <div style = "margin:40px"></div>
-        </div>
             <div class="row">
-            {% for fav in favorites.all %}
-                <div class="col-md-4 col-sm-6 portfolio-item user_info" style="max-width:400px;height:400px;" align="center">
-                    <a href="#portfolioModal" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover" data-toggle="tooltip"  onclick="showlargeimg($(this))">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-search-plus fa-3x fa-inverse"></i>
+                <h1 class = "user_info">Favorite</h1>
+                <div style = "margin:40px"></div>
+            </div>
+            <div class="row">
+                {% for fav in favorites.all %}
+                    <div class="col-md-4 col-sm-6 portfolio-item user_info" style="max-width:400px;height:400px;" align="center">
+                        <a href="#portfolioModal" class="portfolio-link" data-toggle="modal">
+                            <div class="portfolio-hover" data-toggle="tooltip"  onclick="showlargeimg($(this))">
+                                <div class="portfolio-hover-content">
+                                    <i class="fa fa-search-plus fa-3x fa-inverse"></i>
+                                </div>
                             </div>
+                            <img src="{{ fav.image.url }}" id="smallimg" style="max-width:360px;max-height:400px;" alt="">
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>{{fav.theme.name}}</h4>
+                            <p class="text-muted">{{fav.description}}</p>
                         </div>
-                        <img src="{{ fav.image.url }}" id="smallimg" style="max-width:360px;max-height:400px;" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>{{fav.theme.name}}</h4>
-                        <p class="text-muted">{{fav.description}}</p>
                     </div>
-                </div>
                 {% endfor %}
             </div>
         </div>
     </section>
 
-<div class="portfolio-modal modal fade" id="portfolioModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -97,16 +97,26 @@
                     </div>
                 </div>
             </div>
-            <img id = "largeimg" align="center" style="max-width: 100%;height: auto;">
+            <div id="detail"></div>
+{#            <img id = "largeimg" align="center" style="max-width: 100%;height: auto;">#}
         </div>
     </div>
+{% endblock %}
 
-<script>
-    function showlargeimg(sel) {
-        var path = sel.next()[0].src;
-        $('#largeimg').attr("src",path);
-    }
-</script>
+{% block script %}
+
+    <script>
+        function showlargeimg(sel) {
+            var path = sel.next()[0].src;
+            $('#largeimg').attr("src",path);
+        }
+
+        function get_detail(id) {
+            $.ajax('/images/' + id + '/detail').success(function(data) {
+                $("#detail").html(data);
+            });
+        }
+    </script>
 
 {% endblock %}
 
