--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -60,6 +60,7 @@
                 {% endfor %}
             </div>
         </div>
+        <div class="col-lg-12" style="padding: 40px;"></div>
     </section>
 
 <section id="portfolio">
