--- a/static/css/timeline.css
+++ b/static/css/timeline.css
@@ -214,7 +214,7 @@ body {
     background: rgba(254,209,54,.9);
 }
 
-#photo-gallary .photo-gallary-hover i {
+#photo-gallary .photo-gallary-hover .fa-arrow-right {
     position: absolute;
     top: 35%;
     left: 35%;
