--- a/templates/timeline/card.html
+++ b/templates/timeline/card.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 <div class="col-md-6 col-md-offset-3 portfolio-item" style="background-color:white">
 
-    <div>
+    <div style="height:45px">
     <div class = "col-md-12 " style="margin-top:10px;">
         <div class = "col-lg-1" style="margin-left:-15px">{% avatar post.user.user.username 24 class="img-round" id="user_avatar" %}</div>
         <div class = "col-lg-3" style="margin-left:-15px"><p class = "text-muted">{{post.user.user.username}}</p></div>
@@ -46,5 +46,3 @@
 
 </div>
 {% endfor %}
-
-
