--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Share Hall</h4>
+                    <h4 class="service-heading">Portfolio</h4>
                     <p class="text-muted">Enjoy the works of friends and experience their excellent theme on your own pictures.</p>
                 </div>
             </div>
