--- a/templates/timeline/timeline.html
+++ b/templates/timeline/timeline.html
@@ -14,15 +14,25 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Share Hall</h2>
+                <h2 class="section-heading">Portfolio</h2>
                 <h3 class="section-subheading text-muted">Let's enjoy it.</h3>
             </div>
         </div>
+        <div>
+            <div class="col-lg-3"></div>
+            <div class="col-lg-5"><input name="query" type="text" class="form-control" id = "search_input" placeholder="search your interst"></div>
+            <div class="col-lg-2"><button class= "btn btn-info" type="submit" onclick="search()">Search</button></div>
+            <div class="col-lg-2"></div>
+        </div>
+
+        <div style="padding: 20px;"></div>
+
         <div class="row" id="timeline-main">
             {% include 'timeline/card.html' %}
         </div>
     </div>
 </section>
+
 
 {#<p class="text-muted text-center" id="loading">#}
 {#    <img src={% static "img/loading.gif"%} alt="loading" />#}
