--- a/templates/framework/base.html
+++ b/templates/framework/base.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Picature - Share You Photos and Theme</title>
+    <title>Picature - Share You Photos and Themes</title>
 
     <link rel="shortcut icon" type="image/png" href={% static "favicon.png"%}/>
 
