--- a/templates/framework/navbar.html
+++ b/templates/framework/navbar.html
@@ -22,6 +22,18 @@
                     <a class="page-scroll" href={% url "editor" %}>Editor</a>
                 </li>
             </ul>
+
+            <div class="col-sm-4 col-md-4 col-md-offset-1">
+                <form class="navbar-form" role="search">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search" name="q">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>
+                    </div>
+                </div>
+                </form>
+            </div>
+
             <ul class="nav navbar-nav navbar-right">
                 <li class="hidden">
                     <a href="#page-top"></a>
