--- a/templates/framework/navbar.html
+++ b/templates/framework/navbar.html
@@ -23,7 +23,7 @@
                 </li>
             </ul>
 
-            <div class="col-sm-4 col-md-4 col-md-offset-1">
+            <div class="col-sm-4 col-md-4 col-md-offset-1" style="text-align: center">
                 <form class="navbar-form" role="search">
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="Search" name="q">
