--- a/templates/timeline/comments.html
+++ b/templates/timeline/comments.html
@@ -18,9 +18,9 @@
       <input type="text" class="form-control" id="comment_content"
          placeholder="share your comment">
        {% if user in post.like_users.all %}
-           <button class="btn btn-sm btn-danger" id = "comment_favorite" style = "margin:10px " onclick="unlike($(this))">unfavorite</button>
+           <button class="btn btn-sm btn-danger" id = "comment_favorite" style = "margin:10px " onclick="setlike($(this))">unfavorite</button>
        {% else %}
-           <button class="btn btn-sm btn-danger" id = "comment_favorite" style = "margin:10px " onclick="like($(this))">favorite</button>
+           <button class="btn btn-sm btn-danger" id = "comment_favorite" style = "margin:10px " onclick="setlike($(this))">favorite</button>
        {% endif %}
       <button class="btn btn-sm btn-info" id = "comment_content_commit" style = "margin:10px" onclick="add_comment($(this))">commit</button>
    </div>
