--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -22,7 +22,7 @@
             <div class = "col-md-4"></div>
 
             <div class = "col-md-12">
-                <h3 id = "user_head">{{ user.user.username }}</h3>
+                <h3 id = "user_head">{{ user.username }}</h3>
                 <table align="center"style = "font-style: italic;">
                     <tr>
                         <td><p class = "text-muted" style = "margin:5px">Themes {{ posts.count }}</p></td>
