--- a/templates/timeline/card.html
+++ b/templates/timeline/card.html
@@ -6,7 +6,7 @@
     <div style="height:45px">
     <div class = "col-md-12 " style="margin-top:10px;">
         <div class = "col-lg-1" style="margin-left:-15px">{% avatar post.user.user.username 24 class="img-round" id="user_avatar" %}</div>
-        <div class = "col-lg-3" style="margin-left:-15px"><p class = "text-muted">{{post.user.user.username}}</p></div>
+        <div class = "col-lg-3" style="margin-left:-15px"><p class = "text-muted">{{post.user.username}}</p></div>
         <div class = "col-lg-4" style="margin-left:30px;margin-top:-20px"><h3 align="center">{{post.theme.name}}</h3></div>
         <div class = "col-lg-4"><p class="text-muted" align="right" style = "font-style: italic;">{{ post.upload_time|date:"d M Y"}}</p></div>
     </div>
