--- a/templates/timeline/comments.html
+++ b/templates/timeline/comments.html
@@ -6,7 +6,7 @@
         {% avatar comment.user.user.username 60 class="img-round" id="user_avatar" %}
         </div>
         <div class = "col-md-11">
-            <div class = "col-md-7"><label style = "margin-left:10px"> {{ comment.user.user.username }} </label></div>
+            <div class = "col-md-7"><label style = "margin-left:10px"> {{ comment.user.username }} </label></div>
             <div class = "col-md-5"style = "margin-right:-20px" align="right"><p class="text-muted" style = "font-style: italic;">{{ comment.time|date:"d M Y" }}</p></div>
             <div class = "col-md-12"><p style = "margin-left:10px" >{{ comment.content }}</p></div>
         </div>
