--- a/templates/timeline/card.html
+++ b/templates/timeline/card.html
@@ -6,7 +6,7 @@
     <div style="height:45px">
     <div class = "col-md-12 " style="margin-top:10px;">
         <div class = "col-lg-1" style="margin-left:-15px">{% avatar post.user.user.username 24 class="img-round" id="user_avatar" %}</div>
-        <div class = "col-lg-3" style="margin-left:-15px"><p class = "text-muted">{{post.user.user.username}}</p></div>
+        <div class = "col-lg-3" style="margin-left:-15px"><label style="font-size: 16px">{{post.user.user.username}}</label></div>
         <div class = "col-lg-4" style="margin-left:30px;margin-top:-20px"><h3 align="center">{{post.theme.name}}</h3></div>
         <div class = "col-lg-4"><p class="text-muted" align="right" style = "font-style: italic;">{{ post.upload_time|date:"d M Y"}}</p></div>
     </div>
@@ -24,20 +24,22 @@
     <!--add-->
     <div id = "Hiddenpart" style="display:none">{{ post.id }}</div>
 
-    <form class="form-inline" style = "margin:15px; cursor: pointer">
-        <div id="toggle-comments" align="center" onclick="toggle_comments($(this))">
-            <h5> Show Comments</h5>
+    <form class="form-inline" style = "margin:15px;">
+        <div class="row">
+            <div class="col-md-4" style="cursor: pointer">
+                <div id="toggle-comments" class="text-muted" align="center" onclick="toggle_comments($(this))">
+                    <h5> Show Comments</h5>
+                </div>
+            </div>
+            <div class="col-md-6"></div>
+            <div class="col-md-2" style="padding-top: 5px; cursor: pointer; display:inline" onclick="setlike($(this))">
+                <i class="fa fa-heart-o fa-lg"></i>
+                <span class="card-like" style="font-size: 15px; margin-left: 4px"> 100+ </span>
+            </div>
         </div>
     </form>
 
-
-    <div class="collapse" style="background-color:#F0F0F0">
-        <form class="form-inline" style = "margin:15px">
-            <div class="form-group">
-                <h5>comments:</h5>
-            </div>
-        </form>
-
+    <div class="collapse">
         <div>
             {% include "timeline/comments.html" with comments=post.comments user=user post=post %}
         </div>
