username bug fix

--- a/templates/timeline/comments.html
+++ b/templates/timeline/comments.html
@@ -6,7 +6,7 @@
             {% avatar comment.user.user.username 40 class="img-round" id="user_avatar" %}
         </div>
         <div class = "col-md-11">
-            <div class = "col-md-7"><label> {{ comment.user.user.username }} </label></div>
+            <div class = "col-md-7"><label> {{ comment.user.username }} </label></div>
             <div class = "col-md-5"style = "margin-right:-20px" align="right">
                 <p class="text-muted" style = "font-style: italic;margin-bottom:0px">{{ comment.time|date:"d M Y" }}</p>
             </div>
