--- a/templates/timeline/timeline.html
+++ b/templates/timeline/timeline.html
@@ -14,8 +14,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Portfolio</h2>
-                <h3 class="section-subheading text-muted">Let's enjoy it.</h3>
+                <h2 class="section-heading" style="margin-bottom:50px">Portfolio</h2>
             </div>
         </div>
 
