multiple bugs fixed

--- a/templates/framework/base.html
+++ b/templates/framework/base.html
@@ -128,6 +128,14 @@
             }
         }
     });
+
+    function jump2profile(id) {
+        location.href = '/u/' + id + '/profile';
+    }
+
+    function jump2detail(id) {
+        location.href = '/images/' + id + '/detail';
+    }
 </script>
 
 {% block script %}
