--- a/templates/editor/editor.html
+++ b/templates/editor/editor.html
@@ -16,18 +16,21 @@
         <div class="modal-dialog modal-sm" role="document">
             <div class="modal-content">
                 <div class="modal-body">
-                    <p>
-                        <label for="theme_name">Theme Name</label><input type="text" id="theme_name">
-                    </p>
-                    <p>
-                        <label for="theme_description">Theme Description</label><textarea type="text" id="theme_description" rows="5"></textarea>
-                    </p>
-                    <div class="col-sm-12">
-                        <div class="col-sm-6"><p><input type="radio" value="1" id="theme_private">private</p></div>
-                        <div class="col-sm-6"><p><input type="radio" value="0" id="theme_private" checked=checked">public</p></div>
-                    </div>
+                    <form role="form">
+                        <div class="form-group">
+                            <label for="theme_name">Theme name</label>
+                            <input class="form-control" id="theme_name">
+                        </div>
+                        <div class="form-group">
+                            <label for="theme_description">Theme description</label>
+                            <textarea class="form-control" id="theme_description" rows="3"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label class="radio-inline"><input type="radio" name="theme_private" id="theme_private" value="1">private</label>
+                            <label class="radio-inline"><input type="radio" name="theme_private" id="theme_private" value="0" checked="checked">public</label>
+                        </div>
+                    </form>
                 </div>
-                <div style="margin-bottom: 15px;"></div>
                 <div class="modal-footer">
                     <button class="btn btn-primary" data-dismiss="modal" id="export-image">Save changes</button>
                     <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
